@@ -32,16 +32,17 @@ allprojects {
 
 subprojects {
 
-    apply plugin: 'java'
+//    apply plugin: 'java'
     apply plugin: 'kotlin'
 
     compileJava {
-        sourceCompatibility = 1.6
-        targetCompatibility = 1.6
+        sourceCompatibility = '1.6'
+        targetCompatibility = '1.6'
     }
+
     compileTestJava {
-        sourceCompatibility = 1.8
-        targetCompatibility = 1.8
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
     }
 
     sourceSets {
@@ -89,11 +90,28 @@ subprojects {
     }
 }
 
+defaultTasks 'clean', 'jar'
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives sourcesJar
+}
+
+test {
+    jvmArgs "-XX:MaxPermSize=512m"
+}
+
+
 task wrapper(type: Wrapper) {
     gradleVersion = '2.14'
 }
 
-defaultTasks 'clean', 'build'
+
+
 
 
 
